--- a/index.html
+++ b/index.html
@@ -222,9 +222,11 @@
           </div>
         </div>
       </div>
+      <div class="sticky">
+          <model-viewer id="mv-demo" shadow-intensity="1" src="./black_hole/scene.gltf"
+          alt="A 3D model of an astronaut" auto-rotate camera-controls></model-viewer>
+      </div>
     </section>
     <script src="./app.js"></script>
-    <model-viewer id="mv-demo" shadow-intensity="1" src="./black_hole/scene.gltf"
-            alt="A 3D model of an astronaut" auto-rotate camera-controls></model-viewer></div>
   </body>
 </html>
